--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,6 +1,10 @@
 name: Integration Tests
 
 on:
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
   workflow_dispatch:  # Manual trigger only
   schedule:
     # Run daily at 2 AM UTC
