chore: prepare release 0.1.0rc1
Update version to 0.1.0rc1 and prepare changelog for release candidate.

This release candidate includes:
- PyPI publishing workflow
- Integration tests
- Improved model validation
- Enhanced documentation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "cryptopanic"
-version = "0.1.0"
+version = "0.1.0rc1"
 description = "A Python client library for the CryptoPanic API"
 readme = "README.md"
 requires-python = ">=3.8"
