--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,6 +3,12 @@ name: Publish to PyPI
 on:
   release:
     types: [published]
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Release tag (e.g., v0.1.0)'
+        required: true
+        type: string
   # Note: We use GitHub Releases instead of direct tag pushes for:
   # - Better visibility and release notes
   # - More intentional publishing (less accidental)
@@ -35,9 +41,10 @@ jobs:
       - name: Extract version from release tag
         id: tag_version
         env:
-          TAG_NAME: ${{ github.event.release.tag_name }}
+          TAG_NAME: ${{ github.event.release.tag_name || github.event.inputs.tag }}
         run: |
           # GitHub releases provide the tag in github.event.release.tag_name
+          # Manual dispatch uses github.event.inputs.tag
           # Remove 'v' prefix if present
           if [[ "$TAG_NAME" == v* ]]; then
             VERSION=${TAG_NAME#v}
@@ -75,7 +82,11 @@ jobs:
       - name: Check if pre-release
         id: check_prerelease
         run: |
-          if [ "${{ github.event.release.prerelease }}" == "true" ]; then
+          # For manual dispatch, always publish (assume final release)
+          if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+            echo "skip=false" >> $GITHUB_OUTPUT
+            echo "✓ Manual dispatch - will publish to PyPI"
+          elif [ "${{ github.event.release.prerelease }}" == "true" ]; then
             echo "skip=true" >> $GITHUB_OUTPUT
             echo "⚠️  Pre-release detected - skipping PyPI publish"
           else
